--- a/.github/workflows/terraform-infra.yml
+++ b/.github/workflows/terraform-infra.yml
@@ -209,30 +209,14 @@ jobs:
             
             # Delete non-default security groups with dependency handling
             echo "Getting security groups for VPC: $vpc_id"
-            aws ec2 describe-security-groups --filters "Name=vpc-id,Values=$vpc_id" --query 'SecurityGroups[*].[GroupId,GroupName,IpPermissions[*].UserIdGroupPairs[*].GroupId,IpPermissionsEgress[*].UserIdGroupPairs[*].GroupId]' --output json | jq -c '.[] | {GroupId: .[0], GroupName: .[1], Dependencies: (.[] | select(length > 0) | .[])}' | while read -r sg_info; do
-              sg=$(echo "$sg_info" | jq -r '.GroupId')
-              name=$(echo "$sg_info" | jq -r '.GroupName')
-              deps=$(echo "$sg_info" | jq -r '.Dependencies')
-              
+            # Delete non-default security groups
+            echo "Getting security groups for VPC: $vpc_id"
+            aws ec2 describe-security-groups --filters "Name=vpc-id,Values=$vpc_id" --query 'SecurityGroups[*].[GroupId,GroupName]' --output text | while read -r sg name; do
               if [[ -n "$sg" && "$sg" =~ ^sg- ]]; then
                 echo "Processing security group: $sg ($name)"
                 
                 if [[ "$name" != "default" ]]; then
-                  if [[ -n "$deps" ]]; then
-                    echo "Found dependencies for security group $sg: $deps"
-                    
-                    # Try to remove dependencies by revoking rules
-                    echo "Revoking ingress rules for security group $sg"
-                    aws ec2 revoke-security-group-ingress --group-id "$sg" --ip-permissions '[{"IpProtocol": "-1", "UserIdGroupPairs": [{"GroupId": "$sg"}]}, {"IpProtocol": "-1", "UserIdGroupPairs": [{"GroupId": "$sg"}]}, {"IpProtocol": "-1", "UserIdGroupPairs": [{"GroupId": "$sg"}]}]' || echo "Could not revoke ingress rules"
-                    
-                    echo "Revoking egress rules for security group $sg"
-                    aws ec2 revoke-security-group-egress --group-id "$sg" --ip-permissions '[{"IpProtocol": "-1", "UserIdGroupPairs": [{"GroupId": "$sg"}]}, {"IpProtocol": "-1", "UserIdGroupPairs": [{"GroupId": "$sg"}]}, {"IpProtocol": "-1", "UserIdGroupPairs": [{"GroupId": "$sg"}]}]' || echo "Could not revoke egress rules"
-                    
-                    # Wait a bit for rules to be removed
-                    echo "Waiting 5 seconds for rules to be removed..."
-                    sleep 5
-                  fi
-                  
+                  # Try to delete the security group
                   echo "Deleting security group: $sg"
                   aws ec2 delete-security-group --group-id "$sg" || echo "Security group $sg could not be deleted (dependencies may still exist)"
                 else
