fix: Add -upgrade flag to terraform init
- Added -upgrade flag to allow provider version updates
- This resolves the provider version constraint conflicts

--- a/.github/workflows/terraform-infra.yml
+++ b/.github/workflows/terraform-infra.yml
@@ -305,9 +305,9 @@ jobs:
           # Set environment variables
           ENVIRONMENT="${{ github.event.inputs.environment || 'dev' }}"
           
-          # Initialize Terraform
-          echo "Initializing Terraform..."
-          terraform init
+          # Initialize Terraform with upgrade flag
+          echo "Initializing Terraform with upgrade flag..."
+          terraform init -upgrade
           
           # Check for existing state
           if [[ -f terraform.tfstate ]]; then
