fix: Add -upgrade flag to all Terraform init commands
- Added -upgrade flag to all terraform init commands in the workflow
- This ensures consistent provider version updates across all modules
- Resolves provider version constraint conflicts

--- a/.github/workflows/terraform-infra.yml
+++ b/.github/workflows/terraform-infra.yml
@@ -382,8 +382,8 @@ jobs:
           region = "${{ env.AWS_REGION }}"
           EOF
           
-          # Initialize and plan
-          terraform init
+          # Initialize and plan with upgrade flag
+          terraform init -upgrade
           terraform plan -out=tfplan
         working-directory: ${{ github.workspace }}/${{ env.TF_SOURCE_DIR }}
 
