fix: resolve stale plan and IAM permission issues
- Update IAM policy to include necessary permissions for managing users and groups
- Modify Terraform workflow to prevent stale plan errors by combining plan and apply steps
- Add proper resource imports after initial apply

--- a/.github/workflows/terraform-infra.yml
+++ b/.github/workflows/terraform-infra.yml
@@ -412,16 +412,16 @@ jobs:
           terraform import aws_cloudwatch_log_group.eks ${AWS_REGION}_aws_eks_${{ github.event.inputs.environment }}_cluster
         working-directory: ${{ github.workspace }}/${{ env.TF_SOURCE_DIR }}
 
-      - name: Create Terraform Plan
-        if: ${{ env.TF_ACTION == 'apply' }}
-        run: |
-          # Create a plan file
-          terraform plan -out=tfplan
-        working-directory: ${{ github.workspace }}/${{ env.TF_SOURCE_DIR }}
-
       - name: Apply Terraform
         if: ${{ env.TF_ACTION == 'apply' }}
         run: |
+          # Initialize Terraform with upgrade flag
+          terraform init -upgrade
+          
+          # Create and apply plan in one step to avoid stale plan issues
+          terraform plan -out=tfplan
+          terraform apply -auto-approve tfplan
+          
           # Import existing resources if they exist
           if aws s3 ls mlflow-backend 2>/dev/null; then
             echo "Importing existing S3 bucket"
