create bucket name in s3 module

--- a/.github/workflows/terraform-infra.yml
+++ b/.github/workflows/terraform-infra.yml
@@ -380,6 +380,7 @@ jobs:
           cluster_name = "mlflow-cluster-${{ github.event.inputs.environment || 'dev' }}"
           db_password = "${{ env.DB_PASSWORD }}"
           region = "${{ env.AWS_REGION }}"
+          bucket_name = "mlflow-backend-${{ github.event.inputs.environment || 'dev' }}"
           EOF
           
           # Initialize and plan with upgrade flag
