move import step up the workflow

--- a/.github/workflows/terraform-infra.yml
+++ b/.github/workflows/terraform-infra.yml
@@ -366,6 +366,37 @@ jobs:
           echo "PRIVATE_SUBNET_IDS=$(echo $outputs | jq -r '.private_subnets.value | @json')" >> $GITHUB_OUTPUT
         working-directory: ${{ github.workspace }}/${{ inputs.source_dir || 'infra/terraform/vpc' }}
 
+      - name: Import Existing Resources
+        if: ${{ env.TF_ACTION == 'apply' && github.event.inputs.recreate == 'true' }}
+        run: |
+          terraform init -upgrade
+      
+          # Import DB subnet group if it exists
+          if aws rds describe-db-subnet-groups --db-subnet-group-name mlflow-db-subnet-group-dev 2>/dev/null; then
+            terraform import aws_db_subnet_group.mlflow mlflow-db-subnet-group-dev
+          fi
+      
+          # Import S3 bucket if it exists
+          if aws s3api head-bucket --bucket mlflow-backend 2>/dev/null; then
+            terraform import aws_s3_bucket.mlflow_bucket mlflow-backend
+          fi
+      
+          # Import IAM user if it exists
+          if aws iam get-user --user-name user 2>/dev/null; then
+            terraform import aws_iam_user.mlflow_user user
+          fi
+      
+          # Import IAM policy if it exists
+          if aws iam get-policy --policy-arn arn:aws:iam::${AWS_ACCOUNT_ID}:policy/mlflow-s3-access 2>/dev/null; then
+            terraform import aws_iam_policy.mlflow_s3_policy arn:aws:iam::${AWS_ACCOUNT_ID}:policy/mlflow-s3-access
+          fi
+      
+          # Import CloudWatch log group if it exists
+          if aws logs describe-log-groups --log-group-name /aws/eks/mlflow-cluster-${{ github.event.inputs.environment }}/cluster 2>/dev/null; then
+            terraform import aws_cloudwatch_log_group.eks /aws/eks/mlflow-cluster-${{ github.event.inputs.environment }}/cluster
+          fi
+        working-directory: ${{ github.workspace }}/${{ env.TF_SOURCE_DIR }}
+
       - name: Configure MLFlow Terraform
         run: |
           # Set fallback values if inputs are not defined (non-manual runs)
@@ -403,16 +434,6 @@ jobs:
           fi
         env:
           AWS_DEFAULT_REGION: ${{ env.AWS_REGION }}
-
-      - name: Import Existing Resources
-        if: ${{ env.TF_ACTION == 'apply' && github.event.inputs.recreate == 'true' }}
-        run: |
-          terraform import aws_db_subnet_group.mlflow mlflow-db-subnet-group-dev
-          terraform import aws_s3_bucket.mlflow_bucket mlflow-backend
-          terraform import aws_iam_user.mlflow_user user
-          terraform import aws_iam_policy.mlflow_s3_policy mlflow-s3-access
-          terraform import aws_cloudwatch_log_group.eks ${AWS_REGION}_aws_eks_${{ github.event.inputs.environment }}_cluster
-        working-directory: ${{ github.workspace }}/${{ env.TF_SOURCE_DIR }}
 
       - name: Apply Terraform
         if: ${{ env.TF_ACTION == 'apply' }}
