add working directory

--- a/.github/workflows/terraform-infra.yml
+++ b/.github/workflows/terraform-infra.yml
@@ -154,6 +154,7 @@ jobs:
               fi
             fi
           done
+        working-directory: ${{ github.workspace }}/${{ env.TF_SOURCE_DIR }}
 
       - name: Verify Created Resources
         if: ${{ env.TF_ACTION == 'apply' }}
